force-app/main/default/objects/Incidencia_Proveedor__c/Incidencia_Proveedor__c.object-meta.xml
<CustomObject>
    <description>Registro de fallas de proveedores (Account RT Supply Chain Partner) ligadas a un SP: quien fallo, por que y como se resolvio. El nivel de servicio se calcula por reporte/consulta sobre estos registros. La incidencia conserva al proveedor del momento aunque el SP cambie de carrier despues.</description>
    <label>Incidencia de Proveedor</label>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>Numero de Incidencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidencias de Proveedor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>