force-app/main/default/objects/Incidencia_Proveedor__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierta</fullName>
                <default>true</default>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>