force-app/main/default/objects/Incidencia_Proveedor__c/fields/Fecha_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Incidencia__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Fecha de la Incidencia</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>