force-app/main/default/objects/Incidencia_Proveedor__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quedó mal (no se presentó)</fullName>
            </value>
            <value>
                <fullName>Falla mecánica</fullName>
            </value>
            <value>
                <fullName>Equipo no disponible</fullName>
            </value>
            <value>
                <fullName>Incumplimiento a cita</fullName>
            </value>
            <value>
                <fullName>Retraso</fullName>
            </value>
            <value>
                <fullName>Incidente en ruta (robo/accidente)</fullName>
            </value>
            <value>
                <fullName>Canceló el proveedor</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>