force-app/main/default/objects/Incidencia_Proveedor__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El proveedor debe ser una cuenta de tipo Supply Chain Partner</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supply Chain Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incidencias de Proveedor</relationshipLabel>
    <relationshipName>Incidencias_Proveedor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>