force-app/main/default/objects/Incidencia_Proveedor__c/fields/Proveedor_Sustituto__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_Sustituto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedor Sustituto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El proveedor sustituto debe ser una cuenta de tipo Supply Chain Partner</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supply Chain Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incidencias como Sustituto</relationshipLabel>
    <relationshipName>Incidencias_como_Sustituto</relationshipName>
    <type>Lookup</type>
</CustomField>