force-app/main/default/objects/Incidencia_Proveedor__c/fields/Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se cambió de proveedor</fullName>
            </value>
            <value>
                <fullName>Se canceló el SP</fullName>
            </value>
            <value>
                <fullName>Continuó el viaje</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>