force-app/main/default/objects/Incidencia_Proveedor__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipment (SP)</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Incidencias de Proveedor</relationshipLabel>
    <relationshipName>Incidencias_Proveedor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>